--- a/mtgordle-app/src/App.css
+++ b/mtgordle-app/src/App.css
@@ -74,8 +74,6 @@
 .title {
   display: inline-block;
   color: white;
-  
-  
   margin-top: 0.3em;
   margin-bottom: 0.3em;
   font-size: 2.4em;
@@ -84,7 +82,6 @@
 .header {
   display: inline-block;
   color: white;
-  
   margin-top: 0.3em;
   margin-bottom: 0.3em;
   font-size: 2.0em;
@@ -109,7 +106,6 @@
 .card-info {
   display: inline-block;
   margin-right:5em;
-  
 }
 
 .submit-button {
@@ -167,6 +163,21 @@
 
 .table {
   display: table;
+}
+
+.stat {
+  display: inline-block;
+  margin-left: 2em;
+  margin-right: 2em;
+  padding-left: .5em;
+  padding-right: .5em;
+  margin-bottom: 1em;
+  padding-bottom: 0em;
+}
+
+.stat-border {
+  border: solid;
+  
 }
 
 
