custom css for mobile

--- a/mtgordle-app/src/App.css
+++ b/mtgordle-app/src/App.css
@@ -109,7 +109,6 @@
   display: inline-block;
   margin-right:5em;
   vertical-align: top;
-
 }
 
 .submit-button {
@@ -186,7 +185,24 @@
 
 .stat-border {
   border: solid;
-  
 }
+
+/* Mobile attempts */
+@media screen and (max-width: 768px) {
+  .current-guesses {
+    display: inline-block;
+    margin-left:1em;
+    margin-right: 1em;
+    vertical-align: top;
+  }
+  
+  .card-info {
+    display: inline-block;
+    margin-right:1em;
+    margin-left: 1em;
+    vertical-align: top;
+  }
+}
+
 
 
