fix mobile layout

--- a/mtgordle-app/src/CSS/Content.css
+++ b/mtgordle-app/src/CSS/Content.css
@@ -3,3 +3,13 @@
     display: flex;
     align-items: baseline;
 }
+
+/* Mobile attempts */
+@media screen and (max-width: 1000px) {
+    .content {
+        flex-wrap: wrap;
+        display: flex;
+        align-items: baseline;
+        justify-content: space-evenly;
+    }
+  }
