content format for mobile

--- a/mtgordle-app/src/CSS/Content.css
+++ b/mtgordle-app/src/CSS/Content.css
@@ -4,6 +4,23 @@
     align-items: baseline;
 }
 
+.row {
+    border: .1em;
+    border-color: white;
+    border-style: solid;
+    padding: .8em;
+    width: 25em;
+    margin: 1em;
+    height: auto;
+    min-height: 2.5em;
+    background-color: #30343d;
+    text-align: left;
+}
+
+.row-guesses {
+    text-align: center;
+}
+
 /* Mobile attempts */
 @media screen and (max-width: 1000px) {
     .content {
@@ -12,4 +29,17 @@
         align-items: baseline;
         justify-content: space-evenly;
     }
-  }
+
+    .row {
+        border: .1em;
+        border-color: white;
+        border-style: solid;
+        padding: .8em;
+        width: auto;
+        margin: 1em;
+        height: auto;
+        min-height: 2.5em;
+        background-color: #30343d;
+        text-align: left;
+    }
+}
