--- a/mtgordle-app/src/CSS/Content.css
+++ b/mtgordle-app/src/CSS/Content.css
@@ -28,6 +28,7 @@
         display: flex;
         align-items: baseline;
         justify-content: space-evenly;
+        flex-direction: column;
     }
 
     .row {
@@ -35,12 +36,11 @@
         border-color: white;
         border-style: solid;
         padding: .8em;
-        width: auto;
+        width: 80%;
         margin: 1em;
         height: auto;
         min-height: 2.5em;
         background-color: #30343d;
         text-align: left;
-        min-width: 80%;
     }
 }
