content format for mobile fix

--- a/mtgordle-app/src/CSS/Content.css
+++ b/mtgordle-app/src/CSS/Content.css
@@ -24,7 +24,7 @@
 /* Mobile attempts */
 @media screen and (max-width: 1000px) {
     .content {
-        display:none;
+        display:block;
     }
 
     .row {
@@ -32,12 +32,16 @@
         border-color: white;
         border-style: solid;
         padding: .8em;
-        width: 80%;
+        width: auto;
         margin: 1em;
         height: auto;
         min-height: 2.5em;
         background-color: #30343d;
         text-align: left;
+        flex: 0 0 100%;
     }
-    
+
+    .row-guesses {
+        text-align: center;
+    }
 }
