--- a/mtgordle-app/src/CSS/TopNav.css
+++ b/mtgordle-app/src/CSS/TopNav.css
@@ -1,11 +1,14 @@
 
 
 .title {
-    color: white;
+    color: lightgray;
     margin-top: 0.3em;
     margin-bottom: 0.3em;
     font-size: 2.4em;
+
+
 }
+
 
 .top-nav {
     justify-content: space-evenly;
